# downfile

./: README.md  pyproject.toml  setup.cfg  setup.py
downfile/: __init__.py
downfile/formats/: format_json.py  format_numpy.py  format_pandas.py
