[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "downfile"
version = "0.0.5"
description = "Serialize data as a zip file of json and other formats"
readme = "README.md"  # Create if needed
authors = [
    {name = "Egil Moeller", email = "em@emrld.no"},
]
dependencies = [
    "pandas",
    "importlib-metadata",
    "pyarrow"
]
[project.urls]
Homepage = "https://github.com/emerald-geomodelling/downfile"

[project.entry-points."downfile.dumpers"]
"builtins.NoneType" = "downfile.formats.format_json:to_json"
"builtins.bool" = "downfile.formats.format_json:to_json"
"builtins.dict" = "downfile.formats.format_json:to_json"
"builtins.float" = "downfile.formats.format_json:to_json"
"builtins.int" = "downfile.formats.format_json:to_json"
"builtins.list" = "downfile.formats.format_json:to_json"
"builtins.str" = "downfile.formats.format_json:to_json"
"builtins.Exception" = "downfile.formats.format_exception:exception_to_json"
"datetime.datetime" = "downfile.formats.format_datetime:datetime_to_json"
"datetime.date" = "downfile.formats.format_datetime:date_to_json"
"numpy.bool_" = "downfile.formats.format_numpy:coerce_numpy"
"numpy.int32" = "downfile.formats.format_numpy:coerce_numpy"
"numpy.int64" = "downfile.formats.format_numpy:coerce_numpy"
"numpy.ndarray" = "downfile.formats.format_numpy:to_npy"
"pandas.core.frame.DataFrame" = "downfile.formats.format_pandas:to_feather"

[project.entry-points."downfile.parsers"]
"json" = "downfile.formats.format_json:from_json"
"exception" = "downfile.formats.format_exception:exception_from_json"
"datetime.datetime" = "downfile.formats.format_datetime:datetime_from_json"
"datetime.date" = "downfile.formats.format_datetime:date_from_json"
"npy" = "downfile.formats.format_numpy:from_npy"
"feather" = "downfile.formats.format_pandas:from_feather"

[tool.setuptools.packages.find]
include = ["*"]